# ChangeLog for media-radio/fldigi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.13 2011/02/10 21:10:37 tomka Exp $

  10 Feb 2011; Thomas Kahle <tomka@gentoo.org> fldigi-3.20.34.ebuild:
  x86 stable per bug 351779

  29 Jan 2011; Markos Chandras <hwoarang@gentoo.org> fldigi-3.20.34.ebuild:
  Stable on amd64 wrt bug #351779

*fldigi-3.20.34 (29 Dec 2010)

  29 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.20.34.ebuild:
  Maintenance release

*fldigi-3.20.32 (19 Dec 2010)

  19 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.20.28.ebuild,
  +fldigi-3.20.32.ebuild:
  Version bump. Remove some old version.

*fldigi-3.20.29 (17 Nov 2010)

  17 Nov 2010; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.12.5.ebuild,
  -files/fldigi-3.12.5-libpng14.patch, +fldigi-3.20.29.ebuild:
  Version bump. Remove old versions

  12 Sep 2010; Markos Chandras <hwoarang@gentoo.org> fldigi-3.20.21.ebuild:
  Stable on amd64 wrt bug #335263

*fldigi-3.20.28 (12 Sep 2010)

  12 Sep 2010; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.20.18.ebuild,
  +fldigi-3.20.28.ebuild:
  Version bump. Remove old.

  04 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  fldigi-3.20.21.ebuild:
  x86 stable wrt bug #335263

*fldigi-3.20.21 (27 Jul 2010)

  27 Jul 2010; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.20.13.ebuild,
  fldigi-3.20.18.ebuild, +fldigi-3.20.21.ebuild:
  Version bump. fltk now built with USE=xft (see bug #329757). Thanks to
  <epinephrineaddict@gmail.com>

*fldigi-3.20.18 (03 Jul 2010)

  03 Jul 2010; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.20.18.ebuild:
  Version bump

*fldigi-3.20.13 (06 Jun 2010)

  06 Jun 2010; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.20.13.ebuild:
  Version bump

  24 May 2010; Thomas Beierlein <tomjbe@gentoo.org> fldigi-3.12.5.ebuild,
  +files/fldigi-3.12.5-libpng14.patch: