@@ -1,16 +1,16 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/Attic/fldigi-3.20.21.ebuild,v 1.3 2010/09/12 15:22:40 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/Attic/fldigi-3.21.3.ebuild,v 1.1 2011/02/25 17:10:31 tomjbe Exp $
 
 EAPI=2
 
 DESCRIPTION="Sound card based multimode software modem for Amateur Radio use"
 HOMEPAGE="http://www.w1hkj.com/Fldigi.html"
-SRC_URI="http://www.w1hkj.com/downloads/${P}.tar.gz"
+SRC_URI="http://www.w1hkj.com/downloads/fldigi/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 x86"
+KEYWORDS="~amd64 ~x86"
 IUSE="hamlib nls portaudio pulseaudio sndfile xmlrpc"
 
 RDEPEND=">=x11-libs/fltk-1.1.9:1.1[threads,xft]
