@@ -1,6 +1,12 @@
 # ChangeLog for media-radio/fldigi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.13 2011/02/10 21:10:37 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.14 2011/02/25 17:10:31 tomjbe Exp $
+
+*fldigi-3.21.3 (25 Feb 2011)
+
+  25 Feb 2011; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.20.21.ebuild,
+  -fldigi-3.20.29.ebuild, -fldigi-3.20.32.ebuild, +fldigi-3.21.3.ebuild:
+  Version bump. Cleanup old versions
 
   10 Feb 2011; Thomas Kahle <tomka@gentoo.org> fldigi-3.20.34.ebuild:
   x86 stable per bug 351779
